<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/len_250"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite"
    android:layout_margin="10dp"
    android:elevation="@dimen/len_4"
    android:orientation="vertical"
    tools:ignore="UnusedAttribute">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/len_20"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/len_50"
                android:layout_height="@dimen/len_50"
                android:src="@mipmap/link_item"
                android:layout_marginBottom="@dimen/len_5"/>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/len_20">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/userName"
                    android:textSize="@dimen/font_20"
                    android:textColor="@color/textDark"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fromWhere"
                    android:textSize="@dimen/font_12"
                    android:textColor="@color/colorPrimary"/>

            </LinearLayout>

            <com.mikhaellopez.circularfillableloaders.CircularFillableLoaders
                android:id="@+id/circularFillableLoaders"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:cfl_border="true"
                app:cfl_border_width="0.01dp"
                app:cfl_progress="80"
                app:cfl_wave_amplitude="0.06"
                app:cfl_wave_color="@color/colorPrimary" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/taskInfoColor"
            android:text="@string/link_text"
            android:textSize="@dimen/font_16"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="@dimen/len_20"
        android:orientation="horizontal"
        android:background="@drawable/link_item_border">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.varunest.sparkbutton.SparkButton
                android:id="@+id/spark_button"
                android:layout_width="@dimen/len_18"
                android:layout_height="@dimen/len_18"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/len_5"
                tools:ignore="RtlHardcoded"
                app:sparkbutton_activeImage="@drawable/active_commit"
                app:sparkbutton_inActiveImage="@drawable/inactive_commit"
                app:sparkbutton_primaryColor="@color/colorWhite"
                app:sparkbutton_secondaryColor="@color/commitSecondColor"
                app:sparkbutton_iconSize="@dimen/len_18" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/len_5"
                android:textColor="#9B9DA3"
                android:text="@string/link_commit"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/len_18"
                android:layout_height="@dimen/len_18"
                android:background="@drawable/ic_question"
                android:layout_gravity="center_vertical"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/len_5"
                android:textColor="#9B9DA3"
                android:text="@string/question"/>

        </LinearLayout>


        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/len_18"
                android:layout_height="@dimen/len_18"
                android:background="@drawable/ic_not_display"
                android:layout_gravity="center_vertical"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/len_5"
                android:textColor="#9B9DA3"
                android:text="@string/Recycle"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>